// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with label 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="checkbox-group-19-label-24"
      accessible={true}
      data-blade-component="checkbox-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 0,
                "maxHeight": 36,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="semibold"
            lineHeight={75}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.normal"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(212, 39%, 16%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              , 
            </Text>
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 12,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Apple
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 12,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Mango
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Orange
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<CheckboxGroup /> should render with label 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="checkbox-group-49-label-54"
      accessible={true}
      data-blade-component="checkbox-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 0,
                "maxHeight": 36,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="semibold"
            lineHeight={75}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.normal"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(212, 39%, 16%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              , Select one
            </Text>
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="column"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 12,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Apple
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 12,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Mango
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                },
              ]
            }
          >
            <View
              data-blade-component="checkbox"
              style={
                [
                  {},
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="checkbox-icon-wrapper"
                      isChecked={false}
                      isDisabled={false}
                      isNegative={false}
                      size="medium"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "hsla(0, 0%, 100%, 0)",
                            "borderColor": "hsla(214, 28%, 84%, 1)",
                            "borderRadius": 2,
                            "borderStyle": "solid",
                            "borderWidth": 1.5,
                            "display": "flex",
                            "flexShrink": 0,
                            "height": 16,
                            "justifyContent": "center",
                            "marginBottom": 2,
                            "marginLeft": 2,
                            "marginRight": 2,
                            "marginTop": 2,
                            "position": "relative",
                            "width": 16,
                          },
                        ]
                      }
                    />
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "marginLeft": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      accessible={true}
                      color="surface.text.gray.subtle"
                      data-blade-component="text"
                      fontFamily="text"
                      fontSize={100}
                      fontStyle="normal"
                      fontWeight="regular"
                      lineHeight={100}
                      style={
                        [
                          {
                            "color": "hsla(211, 26%, 34%, 1)",
                            "fontFamily": "Inter",
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 20,
                            "marginBottom": 0,
                            "marginLeft": 0,
                            "marginRight": 0,
                            "marginTop": 0,
                            "paddingBottom": 0,
                            "paddingLeft": 0,
                            "paddingRight": 0,
                            "paddingTop": 0,
                            "textDecorationLine": "none",
                          },
                        ]
                      }
                    >
                      Orange
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginTop": 4,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.muted"
              data-blade-component="text"
              fontFamily="text"
              fontSize={50}
              fontStyle="italic"
              fontWeight="regular"
              lineHeight={50}
              style={
                [
                  {
                    "color": "hsla(211, 22%, 56%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 11,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Select one
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
